# multimorbidity-voice

./: .dockerignore  .gitignore  DATA_DICTIONARY.md  Dockerfile  LICENSE  README.md  README78.md  README_LEGACY.md  README_mext.md  problemi.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: feature_definitions.md  methods.md
scripts/: LEGACY_extractor.py  extract_features.py  extractor.py  extractor_v2.py  merger.py  mfcc.py  mfcc81_LEGACY.py  mfcc_extractor.py  mfcconly.py  praatonly.py
src/voicebiomarkers/: __init__.py
src/voicebiomarkers/config/: __init__.py  constants.py  settings.py
src/voicebiomarkers/core/: __init__.py  mfcc.py  praat.py  preprocessing.py  quality.py
src/voicebiomarkers/io/: __init__.py  audio.py  export.py  metadata.py
src/voicebiomarkers/utils/: __init__.py  logging.py  reproducibility.py
tests/: __init__.py  conftest.py  test_feature_validation.py  test_mfcc.py  test_praat.py  test_praat_integration.py  test_preprocessing.py  test_quality.py
